# securepouch-firmware

./: .gitignore  README.md
nrf52840/: platformio.ini
nrf52840/src/: ble_bond_store.h  main.cpp
nrf9151/: CMakeLists.txt  prj.conf
nrf9151/boards/: nrf9151dk_nrf9151_ns.overlay
nrf9151/src/: main.c
r4wifi/: SecurePouch_R4.ino  ble_bond_store.h  ble_protocol.h  platformio.ini  sp_uart_protocol.h
shared/: ble_protocol.h  sp_uart_protocol.h
